Fix CMakeLists.txt for the cmake test

--- a/test/cmake/CMakeLists.txt
+++ b/test/cmake/CMakeLists.txt
@@ -1,11 +1,11 @@
 #
-# Example of a CMake project depending on Sag-A
+# Example of a CMake project depending on SagA
 #
 cmake_minimum_required(VERSION 2.8)
-project(Sag-ATest)
+project(SagATest)
 set(CMAKE_CXX_STANDARD 17)
-find_package(Sag-A REQUIRED)
-message("-- Found Sag-A version ${Sag-A_VERSION}")
-message("-- Including directories ${Sag-A_INCLUDE_DIR}")
+find_package(SagA REQUIRED)
+message("-- Found SagA version ${SagA_VERSION}")
+message("-- Including directories ${SagA_INCLUDE_DIR}")
 add_executable(main main.cpp)
-target_include_directories(main PUBLIC ${Sag-A_INCLUDE_DIR})
+target_include_directories(main PUBLIC ${SagA_INCLUDE_DIR})
