--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ cmake:
 
 format:
    stage: test
-   image: gitlab/gitlab-runner:latest
+   image: ubuntu:20.04
    before_script:
       - apt-get update && apt-get install -y clang-format
    script:
