Separate tests and examples. Create more tests. Simplify the definition of containers, proxies and values.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 
 option(INSTALL_TESTS "Whether to install the test scripts or not" OFF)
+option(INSTALL_EXAMPLES "Whether to install the examples or not" OFF)
 
 add_library(${PROJECT_NAME} INTERFACE)
 
@@ -37,6 +38,22 @@ export(EXPORT ${PROJECT_NAME}Targets
   )
 
 install(DIRECTORY ${PROJECT_SOURCE_DIR}/include DESTINATION ${PROJECT_BINARY_DIR} FILES_MATCHING PATTERN *.hpp)
+
+#
+# Installation of the examples
+#
+if(INSTALL_EXAMPLES)
+    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/examples)
+    include_directories(include examples)
+    file(GLOB EXAMPLE_SOURCES ${PROJECT_SOURCE_DIR}/examples/*.cpp)
+    set(CMAKE_CXX_FLAGS "-O3 -pedantic -Wall -Wextra")
+    set(CMAKE_CXX_FLAGS_DEBUG "-g -pedantic -Wall -Wextra")
+    foreach(examplesourcefile ${EXAMPLE_SOURCES})
+      get_filename_component(examplename ${examplesourcefile} NAME_WE)
+      add_executable(${examplename} ${examplesourcefile})
+      set_target_properties(${examplename} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/examples CXX_STANDARD 17 CXX_STANDARD_REQUIRED YES)
+    endforeach(examplesourcefile ${EXAMPLE_SOURCES})
+endif(INSTALL_EXAMPLES)
 
 #
 # Installation of the test scripts
