--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ build:
    script:
       - mkdir build
       - cd build
-      - cmake ../ -DINSTALL_TESTS=ON
+      - cmake ../ -DINSTALL_EXAMPLES=ON -DINSTALL_TESTS=ON
       - make install
    artifacts:
       paths:
@@ -22,7 +22,16 @@ test:
    stage: test
    script:
       - ./build/test/cpp/test
-      - ./build/test/cpp/test_earth
+      - ./build/test/cpp/test_containers
+   needs:
+      - job: build
+        artifacts: true
+
+examples:
+   stage: test
+   script:
+      - ./build/examples/earth_and_moon
+      - ./build/examples/solar_system
    needs:
       - job: build
         artifacts: true
