--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ addons:
 env:
 - CC=gcc-7 CXX=g++-7
 
+#branches:
+#  only:
+#  - master
+
 before_install:
 - ${CC} --version
 - ${CXX} --version
@@ -21,7 +25,7 @@ before_install:
 install:
 - mkdir build
 - cd build
-- cmake ../ -DINSTALL_TESTS=ON -DCMAKE_CXX_COMPILER=${CXX}
+- cmake ../ -DINSTALL_EXAMPLES=ON -DINSTALL_TESTS=ON -DCMAKE_CXX_COMPILER=${CXX}
 - make install
 - cd ..
 
@@ -29,9 +33,15 @@ jobs:
   include:
   - name: cpp
     script:
-    - ./build/test/cpp/test
-    - ./build/test/cpp/test_earth
+    - ./build/test/cpp/test_core
+    - ./build/test/cpp/test_containers
+    - ./build/test/cpp/test_world
     after_success: " "
+  - name: examples
+    script:
+    - ./build/examples/earth_and_moon
+    - ./build/examples/solar_system
+    - ./build/examples/star_formation
   - name: cmake
     script:
     - mkdir test/cmake/build
