--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
 - ${CXX} --version
 - cmake --version
 - sudo apt-get update
-- sudo apt-get install -y clang-format
+- sudo apt-get install -y clang-format-10
 - clang-format --version
 
 install:
