--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,15 @@ language: python
 os: linux
 addons:
   apt:
+    update: true
     sources:
     - ubuntu-toolchain-r-test
     packages:
-    - g++-7
+    - g++-10
     - cmake
     - clang-format-10
 env:
-- CC=gcc-7 CXX=g++-7 CLANG_FORMAT=clang-format-10
+- CC=gcc-10 CXX=g++-10 CLANG_FORMAT=clang-format-10
 
 #branches:
 #  only:
