--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,34 @@
-dist: xenial
+dist: focal
 language: python
 
 os: linux
 addons:
   apt:
+    update: true
     sources:
     - ubuntu-toolchain-r-test
     packages:
-    - g++-7
+    - g++-10
     - cmake
+    - clang-format-10
 env:
-- CC=gcc-7 CXX=g++-7
+- CC=gcc-10 CXX=g++-10 CLANG_FORMAT=clang-format-10
+
+branches:
+  only:
+  - master
+  - devel
 
 before_install:
 - ${CC} --version
 - ${CXX} --version
 - cmake --version
-- sudo apt-get install clang-format
+- ${CLANG_FORMAT} --version
 
 install:
 - mkdir build
 - cd build
-- cmake ../ -DINSTALL_TESTS=ON -DCMAKE_CXX_COMPILER=${CXX}
+- cmake ../ -DINSTALL_EXAMPLES=ON -DINSTALL_TESTS=ON -DCMAKE_CXX_COMPILER=${CXX}
 - make install
 - cd ..
 
@@ -29,9 +36,15 @@ jobs:
   include:
   - name: cpp
     script:
-    - ./build/test/cpp/test
-    - ./build/test/cpp/test_earth
+    - ./build/test/cpp/test_core
+    - ./build/test/cpp/test_containers
+    - ./build/test/cpp/test_world
     after_success: " "
+  - name: examples
+    script:
+    - ./build/examples/earth_and_moon
+    - ./build/examples/solar_system
+    - ./build/examples/star_formation
   - name: cmake
     script:
     - mkdir test/cmake/build
@@ -43,4 +56,4 @@ jobs:
     python: 3.7
     install: " "
     script:
-    - clang-format --dry-run -Werror $(find . \( -name "*.cpp" -or -name "*.hpp" \) -and -not -path "*build*")
+    - ${CLANG_FORMAT} --dry-run -Werror $(find . \( -name "*.cpp" -or -name "*.hpp" \) -and -not -path "*build*")
